[tool.poetry]
name = "boribay"
version = "1.1.6"
description = "A discord bot created to make people smile."
authors = ["Dastan Ozgeldi <ozgdastan@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/Dositan/Boribay"
# documentation = "*soon*"
keywords = ["discord", "bot", "discord.py", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "0.23.0"
discord-ext-menus = "1.1"
"discord.py" = "1.7.3"
humanize = "3.9.0"
jishaku = "2.0.0"
Pillow = "8.2.0"
PyNaCl = "1.4.0"
polaroid = "0.3.2"
rich = "10.4.0"
sly = "0.4"
Wand = "0.6.6"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"
black = "21.7b0"

[tool.poetry.scripts]
boribay = "boribay.__main__:main"

[tool.poetry.urls]
"Owner" = "https://discord.com/users/682950658671902730"
"Discord Server" = "https://discord.gg/B4k8tmPDbz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
