[project]
name = "boribay"
version = "2.0.0"
description = "A discord bot created to make people smile."
authors = [
    {name = "Dastan Ozgeldi", email = "ozgdastan@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "discord.py>=1.7.3",
    "asyncpg>=0.25.0",
    "discord-ext-menus>=1.1",
    "humanize>=4.0.0",
    "jishaku>=2.4.0",
    "rich>=12.0.1",
    "Pillow>=9.1.0",
    "Wand>=0.6.7",
    "sly>=0.4",
]
requires-python = ">=3.9"

[project.urls]
Owner = "https://discord.com/users/682950658671902730"
Discord = "https://discord.gg/B4k8tmPDbz"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.scripts]
bot = "python -m boribay"
[tool.pdm.dev-dependencies]
lint = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
