[metadata]
name = Boribay
version = attr: boribay.__version__
description = A discord bot created to make people smile.
license = AGPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Dositan
author_email = ozgdastan@gmail.com
url = https://github.com/Dositan/Boribay
project_urls =
    Source Code = https://github.com/Dositan/Boribay
    Discord Server = https://discord.gg/B4k8tmPDbz
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat
license_files =
    LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8.1,<3.9
include_package_data = True
install_requires =
    asyncpg==0.23.0
    discord-ext-menus==1.1
    discord.py==1.7.3
    humanize==3.9.0
    jishaku==2.0.0
    Pillow==8.2.0
    PyNaCl==1.4.0
    polaroid==0.3.2
    rich==10.4.0
    sly==0.4
    Wand==0.6.6

[options.entry_points]
console_scripts =
    boribay=boribay.__main__:main

[options.packages.find]
include =
    boribay
    boribay.*
